<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/bg_gradient">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_title"
        android:textSize="24sp"
        android:textColor="@android:color/white"
        android:layout_gravity="center"
        android:layout_marginBottom="24dp" />

    <EditText
        android:id="@+id/edtEmailRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_email_hint"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:background="@drawable/bg_input"
        android:padding="12dp"
        android:textColor="#000"
        android:layout_marginBottom="12dp" />

    <EditText
        android:id="@+id/edtPasswordRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_password_hint"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:background="@drawable/bg_input"
        android:padding="12dp"
        android:textColor="#000"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_button"
        android:textColor="@android:color/white"
        android:background="@drawable/bg_button_green" />
</LinearLayout>
